修正bug